--- a/i18n/deu.lang
+++ b/i18n/deu.lang
@@ -1,11 +1,11 @@
 [Translation]
 id=Button
-{s:"Add",t:"2025-12-31"}=Neu
-{s:"Remove",t:"2025-12-31"}=Löschen
-{s:"Detect",t:"2025-12-31"}=Erkennen
+{s:"Add",t:"2026-01-02"}=Neu
+{s:"Remove",t:"2026-01-02"}=Löschen
+{s:"Detect",t:"2026-01-02"}=Erkennen
 {s:"New",t:"2025-12-28"}=Neu
 {s:"Now",t:"2025-12-28"}=Jetzt
-{s:"Stop",t:"2025-12-31"}=Stopp
+{s:"Stop",t:"2026-01-02"}=Stopp
 {s:"Play",t:"2025-12-28"}=Spielen
 {s:"Analyze",t:"2025-12-28"}=Analyse
 {s:"Auto",t:"2025-12-28"}=Auto
@@ -17,21 +17,21 @@ id=Button
 {s:"Swap",t:"2025-12-28"}=Tausch
 {s:"Restart",t:"2025-12-28"}=Neustart
 {s:"Log",t:"2025-12-28"}=Protokoll
-{s:"Run",t:"2025-12-31"}=Start
-{s:"Clear",t:"2025-12-31"}=Zurücks.
-{s:"Grace",t:"2025-12-28"}=Sanft
+{s:"Run",t:"2026-01-02"}=Start
+{s:"Clear",t:"2026-01-02"}=Zurücks.
+{s:"Grace",t:"2026-01-02"}=Sanft
 {s:"Open",t:"2025-12-16"}=Öffnen
 {s:"Recent",t:"2025-12-16"}=Zuletzt
-{s:"Save As",t:"2025-12-31"}=Speich. als
+{s:"Save As",t:"2026-01-02"}=Speich. als
 {s:"Filter",t:"2025-12-16"}=Filter
-{s:"Test",t:"2025-12-31"}=Test
-{s:"Load",t:"2025-12-31"}=Laden
+{s:"Test",t:"2026-01-02"}=Test
+{s:"Load",t:"2026-01-02"}=Laden
 {s:"Continue",t:"2025-12-28"}=Weiter
 {s:"Ok",t:"2025-12-15"}=OK
 {s:"Copy",t:"2025-12-15"}=Kopieren
 {s:"Paste",t:"2025-12-28"}=Einfügen
 {s:"Cancel",t:"2025-12-22"}=Abbrechen
-{s:"RGC",t:"2025-12-31"}=RGC
+{s:"RGC",t:"2026-01-02"}=RGC
 {s:"Browse",t:"2025-12-28"}=Durchsuchen
 {s:"Apply",t:"2025-12-18"}=Übernehmen
 {s:"Use",t:"2025-12-16"}=Verwenden
@@ -113,6 +113,7 @@ id=Checkbox
 {s:"Ponder",t:"2025-12-28"}=Ponder
 {s:"Gauntlet",t:"2025-12-28"}=Gauntlet-Modus
 {s:"Use Pentanomial",t:"2025-12-31"}=Benutze Pentanomial
+{s:"Show all SPRT model variants",t:"2026-01-02"}=Show all SPRT model variants
 
 [Translation]
 id=Input
@@ -133,7 +134,7 @@ id=Input
 {s:"Append mode",t:"2025-12-31"}=Anhänge-Modus
 {s:"Save only finished games",t:"2025-12-31"}=Nur beendete Spiele speichern
 {s:"Minimal tags",t:"2025-12-31"}=Minimale Tags
-{s:"Concurrency",t:"2025-12-31"}=Parallelität
+{s:"Concurrency",t:"2026-01-02"}=Parallelität
 {s:"First opening",t:"2025-12-31"}=Erste Eröffnung
 {s:"Random seed",t:"2025-12-31"}=Zufallssaat
 {s:"Switch policy",t:"2025-12-31"}=Wechselstrategie
@@ -181,7 +182,7 @@ id=Input
 {s:"UCI_Chess",t:"2025-12-28"}=UCI_Chess
 {s:"UCI_LimitStrength",t:"2025-12-28"}=UCI_LimitStrength
 {s:"UCI_Elo",t:"2025-12-28"}=UCI_Elo
-{s:"Search",t:"2025-12-31"}=Suche
+{s:"Search",t:"2026-01-02"}=Suche
 {s:"Elo Lower (H\\1)",t:"2025-12-31"}=Elo Untere (H\1)
 {s:"Elo Upper (H\\1)",t:"2025-12-31"}=Elo Obere (H\1)
 {s:"Number of Games",t:"2025-12-16"}=Anzahl Spiele
@@ -208,15 +209,15 @@ id=Input
 
 [Translation]
 id=Section
-{s:"Global Engine Settings",t:"2025-12-31"}=Globale Engine Einstellungen
-{s:"Engines",t:"2025-12-31"}=Engines
-{s:"Opening",t:"2025-12-31"}=Eröffnung
+{s:"Global Engine Settings",t:"2026-01-02"}=Globale Engine Einstellungen
+{s:"Engines",t:"2026-01-02"}=Engines
+{s:"Opening",t:"2026-01-02"}=Eröffnung
 {s:"Tournament",t:"2025-12-28"}=Turnier
-{s:"Time Control",t:"2025-12-31"}=Zeitkontrolle
-{s:"Pgn",t:"2025-12-31"}=Pgn
-{s:"Adjudicate draw",t:"2025-12-31"}=Remis bewerten
-{s:"Adjudicate resign",t:"2025-12-31"}=Aufgabe bewerten
-{s:"SPRT Configuration",t:"2025-12-31"}=SPRT Konfiguration
+{s:"Time Control",t:"2026-01-02"}=Zeitkontrolle
+{s:"Pgn",t:"2026-01-02"}=Pgn
+{s:"Adjudicate draw",t:"2026-01-02"}=Remis bewerten
+{s:"Adjudicate resign",t:"2026-01-02"}=Aufgabe bewerten
+{s:"SPRT Configuration",t:"2026-01-02"}=SPRT Konfiguration
 {s:"Configuration",t:"2025-12-21"}=Konfiguration
 {s:"Tests",t:"2025-12-16"}=Tests
 {s:"Snackbar Settings",t:"2025-12-18"}=Snackbar Einstellungen
@@ -231,8 +232,8 @@ id=Section
 id=Snackbar
 {s:"Note",t:"2025-12-23"}=Hinweis
 {s:"Nothing to clear.",t:"2025-12-22"}=Nichts zu löschen.
-{s:"Success",t:"2025-12-28"}=Erfolg
-{s:"SPRT tournament started",t:"2025-12-28"}=SPRT Turnier gestartet
+{s:"Success",t:"2026-01-02"}=Erfolg
+{s:"SPRT tournament started",t:"2026-01-02"}=SPRT Turnier gestartet
 {s:"SPRT tournament stopped",t:"2025-12-21"}=SPRT Turnier gestoppt
 {s:"Epd analysis started",t:"2025-12-21"}=EPD Analyse gestartet
 {s:"Analysis finished.",t:"2025-12-21"}=Analyse abgeschlossen.
@@ -313,7 +314,7 @@ id=Tooltip
 {s:"Path to opening file (.epd, .pgn, or raw FEN text)",t:"2025-12-21"}=Pfad zur Eröffnungsdatei (.epd, .pgn oder roher FEN-Text)
 {s:"Hash table size in megabytes for engine memory",t:"2025-12-21"}=Hash-Tabellen-Größe in Megabytes für Engine-Speicher
 {s:"Number of games to run in parallel",t:"2025-12-21"}=Anzahl der parallel laufenden Spiele
-{s:"Clear all SPRT tournament data and results",t:"2025-12-31"}=Alle SPRT-Turnierdaten und -ergebnisse löschen
+{s:"Clear all SPRT tournament data and results",t:"2026-01-02"}=Alle SPRT-Turnierdaten und -ergebnisse löschen
 {s:"Remove this engine from selection",t:"2025-12-28"}=Diese Engine aus der Auswahl entfernen
 {s:"Run Monte Carlo test to estimate SPRT test duration",t:"2025-12-21"}=Monte-Carlo-Test ausführen, um die SPRT-Testdauer zu schätzen
 {s:"Load SPRT tournament configuration and results from file",t:"2025-12-31"}=SPRT-Turnier-Konfiguration und -Ergebnisse aus Datei laden
@@ -338,7 +339,7 @@ id=Tooltip
 {s:"Edit value and click Apply to save changes",t:"2025-12-16"}=Wert bearbeiten und auf Übernehmen klicken, um Änderungen zu speichern
 {s:"Start new tournament with current configuration",t:"2025-12-23"}=Neues Turnier mit aktueller Konfiguration starten
 {s:"Remove selected engine from configuration",t:"2025-12-28"}=Ausgewählte Engine aus der Konfiguration entfernen
-{s:"Auto-detect engine capabilities and supported options",t:"2025-12-31"}=Engine-Fähigkeiten und unterstützte Optionen automatisch erkennen
+{s:"Auto-detect engine capabilities and supported options",t:"2026-01-02"}=Engine-Fähigkeiten und unterstützte Optionen automatisch erkennen
 {s:"Save tournament configuration and results to file",t:"2025-12-23"}=Turnier-Konfiguration und -Ergebnisse in Datei speichern
 {s:"Load tournament configuration and results from file",t:"2025-12-23"}=Turnier-Konfiguration und -Ergebnisse aus Datei laden
 {s:"Stop tournament immediately, aborting running games",t:"2025-12-28"}=Turnier sofort stoppen, laufende Spiele abbrechen
@@ -355,7 +356,7 @@ id=Tooltip
 {s:"All engine instance communication is logged to a single file",t:"2025-12-16"}=Kommunikation aller Engine-Instanzen wird in einer einzigen Datei protokolliert
 {s:"Übersetzung ist derzeit in Arbeit. Nur wenige Teile sind übersetzt.",t:"2025-12-14"}=Übersetzung ist derzeit in Arbeit. Nur wenige Teile sind übersetzt.
 {s:"Clear all tournament data and results",t:"2025-12-23"}=Alle Turnierdaten und -ergebnisse löschen
-{s:"Number of games running in parallel",t:"2025-12-31"}=Anzahl der parallel laufenden Spiele
+{s:"Number of games running in parallel",t:"2026-01-02"}=Anzahl der parallel laufenden Spiele
 {s:"Add this engine to tournament selection",t:"2025-12-23"}=Diese Engine zur Turnierauswahl hinzufügen
 {s:"Repeat all pairings this many times",t:"2025-12-23"}=Alle Paarungen diese Anzahl mal wiederholen
 {s:"Tournament progress: games played / total games",t:"2025-12-28"}=Turnierfortschritt: gespielte Spiele / Gesamtspiele
@@ -410,7 +411,7 @@ id=Tooltip
 {s:"Select option: Tournament",t:"2025-12-23"}=Option auswählen: Turnier
 {s:"Select option: SPRT Tournament",t:"2025-12-28"}=Option auswählen: SPRT Turnier
 {s:"Select option: Messages",t:"2025-12-28"}=Option auswählen: Nachrichten
-{s:"Select option: Tutorial",t:"2025-12-22"}=Option auswählen: Lernprogramm
+{s:"Select option: Tutorial",t:"2026-01-02"}=Option auswählen: Lernprogramm
 {h:"34293611",s:"Load a previously saved tournament from disk and r",t:"2025-12-21"}=Ein zuvor gespeichertes Turnier von der Festplatte laden und das aktuelle Turnier ersetzen.
 {s:"Select option: Choose Language",t:"2025-12-28"}=Option auswählen: Sprache wählen
 {s:"Select directory for log files",t:"2025-12-16"}=Verzeichnis für Protokolldateien auswählen
@@ -427,7 +428,7 @@ id=Tooltip
 {s:"Restart the engine process",t:"2025-12-16"}=Engine-Prozess neu starten
 {s:"Open engine configuration to select and manage engines",t:"2025-12-16"}=Engine-Konfiguration öffnen, um Engines auszuwählen und zu verwalten
 {s:"Toggle engine communication log display",t:"2025-12-16"}=Engine-Kommunikationsprotokoll-Anzeige umschalten
-{s:"Select option: EPD Analysis",t:"2025-12-28"}=Option auswählen: EPD Analyse
+{s:"Select option: EPD Analysis",t:"2026-01-02"}=Option auswählen: EPD Analyse
 {s:"Start a new game from the initial position",t:"2025-12-18"}=Neues Spiel von der Anfangsposition starten
 {h:"caec1135",s:"Show or hide advanced time control options, such a",t:"2025-12-13"}=Erweiterte Zeitkontrolloptionen anzeigen oder ausblenden, wie Turnier, Zeit pro Zug, feste Tiefe und Knoten pro Zug.
 {s:"Make both engines analyze the position without making moves",t:"2025-12-18"}=Beide Engines die Position analysieren lassen, ohne Züge zu machen
@@ -504,8 +505,8 @@ id=Tooltip
 {s:"Select option: Engines hinzufügen",t:"2025-12-18"}=Option auswählen: Engines hinzufügen
 {s:"Stop SPRT tournament or Monte Carlo test immediately",t:"2025-12-28"}=Stop SPRT tournament or Monte Carlo test immediately
 {s:"Start new SPRT tournament with current configuration",t:"2025-12-28"}=Start new SPRT tournament with current configuration
-{s:"Stop SPRT tournament gracefully after current games finish",t:"2025-12-21"}=Stop SPRT tournament gracefully after current games finish
-{s:"Continue SPRT tournament with current configuration",t:"2025-12-28"}=Continue SPRT tournament with current configuration
+{s:"Stop SPRT tournament gracefully after current games finish",t:"2026-01-02"}=Stop SPRT tournament gracefully after current games finish
+{s:"Continue SPRT tournament with current configuration",t:"2026-01-02"}=Continue SPRT tournament with current configuration
 {s:"Load older messages from history (double the display count).",t:"2025-12-21"}=Load older messages from history (double the display count).
 {s:"Enable global hash size setting for all engines",t:"2025-12-23"}=Enable global hash size setting for all engines
 {s:"Enable global trace level for all engines",t:"2025-12-23"}=Enable global trace level for all engines
@@ -525,27 +526,27 @@ id=Table
 {s:"Tb hits",t:"2025-12-28"}=TB
 {s:"Value",t:"2025-12-28"}=Wert
 {s:"Primary variant",t:"2025-12-28"}=Hauptvariante
-{s:"Name",t:"2025-12-31"}=Name
+{s:"Name",t:"2026-01-02"}=Name
 {s:"Elo",t:"2025-12-28"}=Elo
 {s:"Error",t:"2025-12-28"}=Fehler
 {s:"Score",t:"2025-12-28"}=Punkte
 {s:"Total",t:"2025-12-23"}=Gesamt
-{s:"WDL",t:"2025-12-31"}=WDL
-{s:"Count",t:"2025-12-31"}=Anzahl
-{s:"Cause",t:"2025-12-31"}=Ursache
+{s:"WDL",t:"2026-01-02"}=WDL
+{s:"Count",t:"2026-01-02"}=Anzahl
+{s:"Cause",t:"2026-01-02"}=Ursache
 {s:"White",t:"2025-12-23"}=Weiß
 {s:"Black",t:"2025-12-23"}=Schwarz
-{s:"Result",t:"2025-12-31"}=Ergebnis
+{s:"Result",t:"2026-01-02"}=Ergebnis
 {s:"Best move",t:"2025-12-21"}=Bester Zug
 {s:"Engine",t:"2025-12-22"}=Engine
-{s:"Status",t:"2025-12-16"}=Status
+{s:"Status",t:"2026-01-02"}=Status
 {s:"Test",t:"2025-12-16"}=Test
 {s:"Round",t:"2025-12-23"}=Runde
 {s:"Game",t:"2025-12-23"}=Partie
-{s:"Engine in Test",t:"2025-12-31"}=Engine in Test
-{s:"Engine to Compare",t:"2025-12-31"}=Vergleichs-Engine
-{s:"Rating",t:"2025-12-31"}=Rating
-{s:"Games",t:"2025-12-31"}=Spiele
+{s:"Engine in Test",t:"2026-01-02"}=Engine in Test
+{s:"Engine to Compare",t:"2026-01-02"}=Vergleichs-Engine
+{s:"Rating",t:"2026-01-02"}=Rating
+{s:"Games",t:"2026-01-02"}=Spiele
 {s:"Rank",t:"2025-12-22"}=Rang
 {s:"%",t:"2025-12-28"}=%
 {s:"Amoeba \\1.\\2.w\\3p",t:"2025-12-21"}=Amoeba \1.\2.w\3p
@@ -556,18 +557,19 @@ id=Table
 {s:"Pi",t:"2025-12-22"}=Pi
 {s:"Mi",t:"2025-12-22"}=Mi
 {s:"Opening",t:"2025-12-23"}=Opening
+{s:"Type",t:"2026-01-02"}=Type
 
 [Translation]
 id=Tab
-{s:"Engines",t:"2025-12-31"}=Engines
-{s:"Tournament",t:"2025-12-31"}=Turnier
-{s:"Pgn",t:"2025-12-31"}=Pgn
-{s:"Epd",t:"2025-12-31"}=Epd
-{s:"Test",t:"2025-12-31"}=Test
-{s:"Settings",t:"2025-12-31"}=Einstellungen
-{s:"Board",t:"2025-12-31"}=Brett
-{s:"Chatbot",t:"2025-12-31"}=Chatbot
-{s:"SPRT",t:"2025-12-31"}=SPRT
+{s:"Engines",t:"2026-01-02"}=Engines
+{s:"Tournament",t:"2026-01-02"}=Turnier
+{s:"Pgn",t:"2026-01-02"}=Pgn
+{s:"Epd",t:"2026-01-02"}=Epd
+{s:"Test",t:"2026-01-02"}=Test
+{s:"Settings",t:"2026-01-02"}=Einstellungen
+{s:"Board",t:"2026-01-02"}=Brett
+{s:"Chatbot",t:"2026-01-02"}=Chatbot
+{s:"SPRT",t:"2026-01-02"}=SPRT
 
 [Translation]
 id=Chatbot
@@ -668,7 +670,7 @@ id=Text
 {s:"No engines added. You can add engines now if you like.",t:"2025-12-16"}=Keine Engines hinzugefügt. Sie können jetzt Engines hinzufügen, wenn Sie möchten.
 {s:"C:\\Chess\\cutechess-cli\\qapla\\1.\\2\\Leorik-\\3.\\4.exe",t:"2025-12-16"}=C:\Chess\cutechess-cli\qapla\1.\2\Leorik-\3.\4.exe
 {s:"Messages",t:"2025-12-16"}=Nachrichten
-{s:"How can I help you?",t:"2025-12-31"}=Wie kann ich Ihnen helfen?
+{s:"How can I help you?",t:"2026-01-02"}=Wie kann ich Ihnen helfen?
 {s:"Select a tutorial to run:",t:"2025-12-21"}=Wählen Sie ein Lernprogramm zum Ausführen aus:
 {h:"03ec564a",s:"Welcome to the Tournament Tutorial!\n\nThis tutorial",t:"2025-12-21"}=Willkommen beim Turnier-Lernprogramm!\n\nDieses Lernprogramm führt Sie durch die Einrichtung und Durchführung von Engine-Turnieren. Sie können mehrere Schachengines in Round-Robin- und Gauntlet-Matches miteinander vergleichen.\n\nTipp: Wenn Sie einen einfacheren Ansatz bevorzugen, können Sie Turniere auch über den Chatbot konfigurieren und starten - wählen Sie einfach 'Turnier' aus dem Chatbot-Menü. Dieses Lernprogramm deckt den Expertenmodus mit direktem Zugriff auf alle Einstellungen ab.\n\nUm Sie durch den Prozess zu führen, markieren wir die relevanten Abschnitte und Schaltflächen mit einem roten Punkt.\nBewegen Sie den Mauszeiger über die Optionen für detaillierte Tooltips, die jede Einstellung erklären.\n\nLassen Sie uns beginnen! Klicken Sie auf die Registerkarte 'Turnier' im linken Fenster, um die Turnierkonfiguration zu öffnen.
 {h:"c44444aa",s:"Now we'll configure the global engine settings. Th",t:"2025-12-21"}=Jetzt konfigurieren wir die globalen Engine-Einstellungen. Diese Einstellungen gelten für alle Engines im Turnier und gewährleisten faire, konsistente Bedingungen.\n\nEinstellungen können für alle Engines oder einzeln pro Engine gesetzt werden. Wir ändern die Hash-Größe global und das Pondern pro Engine:\n• Lassen Sie das Kontrollkästchen neben Hash aktiviert und setzen Sie 'Hash (MB)' auf \1\n• Deaktivieren Sie das Kontrollkästchen neben Ponder - dies ermöglicht uns, das Pondern später pro Engine zu steuern
@@ -745,20 +747,20 @@ id=Text
 
 [Translation]
 id=TextButton
-{s:"Tournament",t:"2025-12-31"}=Turnier
-{s:"SPRT Tournament",t:"2025-12-31"}=SPRT Turnier
-{s:"EPD Analysis",t:"2025-12-31"}=EPD Analyse
-{s:"Board",t:"2025-12-31"}=Brett
-{s:"Tutorial",t:"2025-12-31"}=Lernprogramm
-{s:"Choose Language",t:"2025-12-31"}=Sprache wählen
-{s:"Messages",t:"2025-12-31"}=Nachrichten
+{s:"Tournament",t:"2026-01-02"}=Turnier
+{s:"SPRT Tournament",t:"2026-01-02"}=SPRT Turnier
+{s:"EPD Analysis",t:"2026-01-02"}=EPD Analyse
+{s:"Board",t:"2026-01-02"}=Brett
+{s:"Tutorial",t:"2026-01-02"}=Lernprogramm
+{s:"Choose Language",t:"2026-01-02"}=Sprache wählen
+{s:"Messages",t:"2026-01-02"}=Nachrichten
 {s:"Deutsch",t:"2025-12-19"}=Deutsch
 {s:"English",t:"2025-12-19"}=English
 {s:"Français",t:"2025-12-19"}=Français
 {s:"Cancel",t:"2025-12-21"}=Abbrechen
 {s:"Board Engines",t:"2025-12-21"}=Brett-Engines
 {s:"Board Cut & Paste",t:"2025-12-21"}=Brett Cut & Paste
-{s:"Add Engines",t:"2025-12-31"}=Add Engines
+{s:"Add Engines",t:"2026-01-02"}=Add Engines
 {s:"Board Window",t:"2025-12-21"}=Board Window
 
 [Translation]
