--- a/i18n/eng.lang
+++ b/i18n/eng.lang
@@ -1,11 +1,11 @@
 [Translation]
 id=Button
-{s:"Add",t:"2025-12-31"}=Add
-{s:"Remove",t:"2025-12-31"}=Remove
-{s:"Detect",t:"2025-12-31"}=Detect
+{s:"Add",t:"2026-01-02"}=Add
+{s:"Remove",t:"2026-01-02"}=Remove
+{s:"Detect",t:"2026-01-02"}=Detect
 {s:"New",t:"2025-12-28"}=New
 {s:"Now",t:"2025-12-28"}=Now
-{s:"Stop",t:"2025-12-31"}=Stop
+{s:"Stop",t:"2026-01-02"}=Stop
 {s:"Play",t:"2025-12-28"}=Play
 {s:"Analyze",t:"2025-12-28"}=Analyze
 {s:"Auto",t:"2025-12-28"}=Auto
@@ -17,21 +17,21 @@ id=Button
 {s:"Swap",t:"2025-12-28"}=Swap
 {s:"Restart",t:"2025-12-28"}=Restart
 {s:"Log",t:"2025-12-28"}=Log
-{s:"Run",t:"2025-12-31"}=Run
-{s:"Clear",t:"2025-12-31"}=Clear
-{s:"Grace",t:"2025-12-28"}=Grace
+{s:"Run",t:"2026-01-02"}=Run
+{s:"Clear",t:"2026-01-02"}=Clear
+{s:"Grace",t:"2026-01-02"}=Grace
 {s:"Open",t:"2025-12-16"}=Open
 {s:"Recent",t:"2025-12-16"}=Recent
-{s:"Save As",t:"2025-12-31"}=Save As
+{s:"Save As",t:"2026-01-02"}=Save As
 {s:"Filter",t:"2025-12-16"}=Filter
-{s:"Test",t:"2025-12-31"}=Test
-{s:"Load",t:"2025-12-31"}=Load
+{s:"Test",t:"2026-01-02"}=Test
+{s:"Load",t:"2026-01-02"}=Load
 {s:"Continue",t:"2025-12-28"}=Continue
 {s:"Ok",t:"2025-12-15"}=Ok
 {s:"Copy",t:"2025-12-15"}=Copy
 {s:"Paste",t:"2025-12-28"}=Paste
 {s:"Cancel",t:"2025-12-22"}=Cancel
-{s:"RGC",t:"2025-12-31"}=RGC
+{s:"RGC",t:"2026-01-02"}=RGC
 {s:"Browse",t:"2025-12-28"}=Browse
 {s:"Apply",t:"2025-12-18"}=Apply
 {s:"Reset All Tutorials",t:"2025-12-16"}=Reset All Tutorials
@@ -115,6 +115,7 @@ id=Checkbox
 {s:"Ponder",t:"2025-12-28"}=Ponder
 {s:"Gauntlet",t:"2025-12-28"}=Gauntlet
 {s:"Use Pentanomial",t:"2025-12-31"}=Use Pentanomial
+{s:"Show all SPRT model variants",t:"2026-01-02"}=Show all SPRT model variants
 
 [Translation]
 id=Input
@@ -135,7 +136,7 @@ id=Input
 {s:"Append mode",t:"2025-12-31"}=Append mode
 {s:"Save only finished games",t:"2025-12-31"}=Save only finished games
 {s:"Minimal tags",t:"2025-12-31"}=Minimal tags
-{s:"Concurrency",t:"2025-12-31"}=Concurrency
+{s:"Concurrency",t:"2026-01-02"}=Concurrency
 {s:"First opening",t:"2025-12-31"}=First opening
 {s:"Random seed",t:"2025-12-31"}=Random seed
 {s:"Switch policy",t:"2025-12-31"}=Switch policy
@@ -185,7 +186,7 @@ Elo Upper (H1)=Elo Upper (H1)
 {s:"UCI_Chess",t:"2025-12-28"}=UCI_Chess
 {s:"UCI_LimitStrength",t:"2025-12-28"}=UCI_LimitStrength
 {s:"UCI_Elo",t:"2025-12-28"}=UCI_Elo
-{s:"Search",t:"2025-12-31"}=Search
+{s:"Search",t:"2026-01-02"}=Search
 {s:"Elo Lower (H\\1)",t:"2025-12-31"}=Elo Lower (H\1)
 {s:"Elo Upper (H\\1)",t:"2025-12-31"}=Elo Upper (H\1)
 {s:"Active",t:"2025-12-31"}=Active
@@ -214,8 +215,8 @@ Elo Upper (H1)=Elo Upper (H1)
 id=Snackbar
 {s:"Note",t:"2025-12-23"}=Note
 {s:"Nothing to clear.",t:"2025-12-22"}=Nothing to clear.
-{s:"Success",t:"2025-12-28"}=Success
-{s:"SPRT tournament started",t:"2025-12-28"}=SPRT tournament started
+{s:"Success",t:"2026-01-02"}=Success
+{s:"SPRT tournament started",t:"2026-01-02"}=SPRT tournament started
 {s:"SPRT tournament stopped",t:"2025-12-21"}=SPRT tournament stopped
 {s:"Epd analysis started",t:"2025-12-21"}=Epd analysis started
 {s:"Analysis finished.",t:"2025-12-21"}=Analysis finished.
@@ -301,27 +302,27 @@ id=Table
 {s:"Tb hits",t:"2025-12-28"}=Tb
 {s:"Value",t:"2025-12-28"}=Value
 {s:"Primary variant",t:"2025-12-28"}=Primary variant
-{s:"Name",t:"2025-12-31"}=Name
+{s:"Name",t:"2026-01-02"}=Name
 {s:"Elo",t:"2025-12-28"}=Elo
 {s:"Error",t:"2025-12-28"}=Error
 {s:"Score",t:"2025-12-28"}=Score
 {s:"Total",t:"2025-12-23"}=Total
-{s:"WDL",t:"2025-12-31"}=WDL
-{s:"Count",t:"2025-12-31"}=Count
-{s:"Cause",t:"2025-12-31"}=Cause
+{s:"WDL",t:"2026-01-02"}=WDL
+{s:"Count",t:"2026-01-02"}=Count
+{s:"Cause",t:"2026-01-02"}=Cause
 {s:"White",t:"2025-12-23"}=White
 {s:"Black",t:"2025-12-23"}=Black
-{s:"Result",t:"2025-12-31"}=Result
+{s:"Result",t:"2026-01-02"}=Result
 {s:"Best move",t:"2025-12-21"}=Best move
 {s:"Engine",t:"2025-12-22"}=Engine
-{s:"Status",t:"2025-12-16"}=Status
+{s:"Status",t:"2026-01-02"}=Status
 {s:"Test",t:"2025-12-16"}=Test
 {s:"Round",t:"2025-12-23"}=Round
 {s:"Game",t:"2025-12-23"}=Game
-{s:"Engine in Test",t:"2025-12-31"}=Engine in Test
-{s:"Engine to Compare",t:"2025-12-31"}=Engine to Compare
-{s:"Rating",t:"2025-12-31"}=Rating
-{s:"Games",t:"2025-12-31"}=Games
+{s:"Engine in Test",t:"2026-01-02"}=Engine in Test
+{s:"Engine to Compare",t:"2026-01-02"}=Engine to Compare
+{s:"Rating",t:"2026-01-02"}=Rating
+{s:"Games",t:"2026-01-02"}=Games
 {s:"Spike \\1.\\2.",t:"2025-12-16"}=Spike \1.\2.
 {s:"Qapla \\1.\\2.",t:"2025-12-15"}=Qapla \1.\2.
 {s:"Rank",t:"2025-12-22"}=Rank
@@ -342,12 +343,13 @@ id=Table
 {s:"Pi",t:"2025-12-22"}=Pi
 {s:"Mi",t:"2025-12-22"}=Mi
 {s:"Opening",t:"2025-12-23"}=Opening
+{s:"Type",t:"2026-01-02"}=Type
 
 [Translation]
 id=Tooltip
 {s:"Add this engine to tournament selection",t:"2025-12-23"}=Add this engine to tournament selection
 {s:"Clear all tournament data and results",t:"2025-12-23"}=Clear all tournament data and results
-{s:"Number of games running in parallel",t:"2025-12-31"}=Number of games running in parallel
+{s:"Number of games running in parallel",t:"2026-01-02"}=Number of games running in parallel
 {s:"Tournament progress: games played / total games",t:"2025-12-28"}=Tournament progress: games played / total games
 {s:"Repeat all pairings this many times",t:"2025-12-23"}=Repeat all pairings this many times
 {s:"Disable automatic color swap after each game",t:"2025-12-23"}=Disable automatic color swap after each game
@@ -357,7 +359,7 @@ id=Tooltip
 {s:"Path to opening file (.epd, .pgn, or raw FEN text)",t:"2025-12-21"}=Path to opening file (.epd, .pgn, or raw FEN text)
 {s:"Hash table size in megabytes for engine memory",t:"2025-12-21"}=Hash table size in megabytes for engine memory
 {s:"Number of games to run in parallel",t:"2025-12-21"}=Number of games to run in parallel
-{s:"Clear all SPRT tournament data and results",t:"2025-12-31"}=Clear all SPRT tournament data and results
+{s:"Clear all SPRT tournament data and results",t:"2026-01-02"}=Clear all SPRT tournament data and results
 {s:"Remove this engine from selection",t:"2025-12-28"}=Remove this engine from selection
 {s:"Run Monte Carlo test to estimate SPRT test duration",t:"2025-12-21"}=Run Monte Carlo test to estimate SPRT test duration
 {s:"Load SPRT tournament configuration and results from file",t:"2025-12-31"}=Load SPRT tournament configuration and results from file
@@ -384,7 +386,7 @@ id=Tooltip
 {s:"Edit value and click Apply to save changes",t:"2025-12-16"}=Edit value and click Apply to save changes
 {s:"Start new tournament with current configuration",t:"2025-12-23"}=Start new tournament with current configuration
 {s:"Remove selected engine from configuration",t:"2025-12-28"}=Remove selected engine from configuration
-{s:"Auto-detect engine capabilities and supported options",t:"2025-12-31"}=Auto-detect engine capabilities and supported options
+{s:"Auto-detect engine capabilities and supported options",t:"2026-01-02"}=Auto-detect engine capabilities and supported options
 {s:"Save tournament configuration and results to file",t:"2025-12-23"}=Save tournament configuration and results to file
 {s:"Load tournament configuration and results from file",t:"2025-12-23"}=Load tournament configuration and results from file
 {s:"Stop tournament immediately, aborting running games",t:"2025-12-28"}=Stop tournament immediately, aborting running games
@@ -449,7 +451,7 @@ id=Tooltip
 {s:"Select option: Tournament",t:"2025-12-23"}=Select option: Tournament
 {s:"Select option: SPRT Tournament",t:"2025-12-28"}=Select option: SPRT Tournament
 {s:"Select option: Messages",t:"2025-12-28"}=Select option: Messages
-{s:"Select option: Tutorial",t:"2025-12-22"}=Select option: Tutorial
+{s:"Select option: Tutorial",t:"2026-01-02"}=Select option: Tutorial
 {h:"34293611",s:"Load a previously saved tournament from disk and r",t:"2025-12-21"}=Load a previously saved tournament from disk and replace the current tournament.
 {s:"Select option: Choose Language",t:"2025-12-28"}=Select option: Choose Language
 {s:"Select directory for log files",t:"2025-12-16"}=Select directory for log files
@@ -466,7 +468,7 @@ id=Tooltip
 {s:"Restart the engine process",t:"2025-12-16"}=Restart the engine process
 {s:"Open engine configuration to select and manage engines",t:"2025-12-16"}=Open engine configuration to select and manage engines
 {s:"Toggle engine communication log display",t:"2025-12-16"}=Toggle engine communication log display
-{s:"Select option: EPD Analysis",t:"2025-12-28"}=Select option: EPD Analysis
+{s:"Select option: EPD Analysis",t:"2026-01-02"}=Select option: EPD Analysis
 {s:"Start a new game from the initial position",t:"2025-12-18"}=Start a new game from the initial position
 {h:"caec1135",s:"Show or hide advanced time control options, such a",t:"2025-12-13"}=Show or hide advanced time control options, such as Tournament, Time per Move, Fixed Depth, and Nodes per Move.
 {s:"Make both engines analyze the position without making moves",t:"2025-12-18"}=Make both engines analyze the position without making moves
@@ -543,8 +545,8 @@ id=Tooltip
 {s:"Select option: Engines hinzufügen",t:"2025-12-18"}=Select option: Engines hinzufügen
 {s:"Stop SPRT tournament or Monte Carlo test immediately",t:"2025-12-28"}=Stop SPRT tournament or Monte Carlo test immediately
 {s:"Start new SPRT tournament with current configuration",t:"2025-12-28"}=Start new SPRT tournament with current configuration
-{s:"Stop SPRT tournament gracefully after current games finish",t:"2025-12-21"}=Stop SPRT tournament gracefully after current games finish
-{s:"Continue SPRT tournament with current configuration",t:"2025-12-28"}=Continue SPRT tournament with current configuration
+{s:"Stop SPRT tournament gracefully after current games finish",t:"2026-01-02"}=Stop SPRT tournament gracefully after current games finish
+{s:"Continue SPRT tournament with current configuration",t:"2026-01-02"}=Continue SPRT tournament with current configuration
 {s:"Load older messages from history (double the display count).",t:"2025-12-21"}=Load older messages from history (double the display count).
 {s:"Command-line arguments to pass to the engine executable",t:"2025-12-28"}=Command-line arguments to pass to the engine executable
 {h:"e0ffa06c",s:"SPRT calculation model:\n- normalized: Recommended ",t:"2025-12-31"}=SPRT calculation model:\n- normalized: Recommended for most cases (supports pentanomial)\n- logistic: Logistic Elo model (supports pentanomial)\n- bayesian: BayesElo model (trinomial only)
@@ -552,15 +554,15 @@ id=Tooltip
 
 [Translation]
 id=Tab
-{s:"Engines",t:"2025-12-31"}=Engines
-{s:"Tournament",t:"2025-12-31"}=Tournament
-{s:"Pgn",t:"2025-12-31"}=Pgn
-{s:"Epd",t:"2025-12-31"}=Epd
-{s:"Test",t:"2025-12-31"}=Test
-{s:"Settings",t:"2025-12-31"}=Settings
-{s:"Board",t:"2025-12-31"}=Board
-{s:"Chatbot",t:"2025-12-31"}=Chatbot
-{s:"SPRT",t:"2025-12-31"}=SPRT
+{s:"Engines",t:"2026-01-02"}=Engines
+{s:"Tournament",t:"2026-01-02"}=Tournament
+{s:"Pgn",t:"2026-01-02"}=Pgn
+{s:"Epd",t:"2026-01-02"}=Epd
+{s:"Test",t:"2026-01-02"}=Test
+{s:"Settings",t:"2026-01-02"}=Settings
+{s:"Board",t:"2026-01-02"}=Board
+{s:"Chatbot",t:"2026-01-02"}=Chatbot
+{s:"SPRT",t:"2026-01-02"}=SPRT
 
 [Translation]
 id=Chatbot
@@ -756,7 +758,7 @@ id=Text
 {s:"No engines added. You can add engines now if you like.",t:"2025-12-16"}=No engines added. You can add engines now if you like.
 {s:"C:\\Chess\\cutechess-cli\\qapla\\1.\\2\\Leorik-\\3.\\4.exe",t:"2025-12-16"}=C:\Chess\cutechess-cli\qapla\1.\2\Leorik-\3.\4.exe
 {s:"Messages",t:"2025-12-16"}=Messages
-{s:"How can I help you?",t:"2025-12-31"}=How can I help you?
+{s:"How can I help you?",t:"2026-01-02"}=How can I help you?
 {s:"Select a tutorial to run:",t:"2025-12-21"}=Select a tutorial to run:
 {s:"Please select your preferred language:",t:"2025-12-19"}=Please select your preferred language:
 {h:"b0ade7c5",s:"Select which engine should be tested (gauntlet eng",t:"2025-12-21"}=Select which engine should be tested (gauntlet engine). This is the engine whose performance will be measured. The other engine will be used as the comparison baseline.
@@ -769,13 +771,13 @@ id=Text
 
 [Translation]
 id=TextButton
-{s:"Tournament",t:"2025-12-31"}=Tournament
-{s:"SPRT Tournament",t:"2025-12-31"}=SPRT Tournament
-{s:"EPD Analysis",t:"2025-12-31"}=EPD Analysis
-{s:"Board",t:"2025-12-31"}=Board
-{s:"Tutorial",t:"2025-12-31"}=Tutorial
-{s:"Choose Language",t:"2025-12-31"}=Choose Language
-{s:"Messages",t:"2025-12-31"}=Messages
+{s:"Tournament",t:"2026-01-02"}=Tournament
+{s:"SPRT Tournament",t:"2026-01-02"}=SPRT Tournament
+{s:"EPD Analysis",t:"2026-01-02"}=EPD Analysis
+{s:"Board",t:"2026-01-02"}=Board
+{s:"Tutorial",t:"2026-01-02"}=Tutorial
+{s:"Choose Language",t:"2026-01-02"}=Choose Language
+{s:"Messages",t:"2026-01-02"}=Messages
 {s:"Deutsch",t:"2025-12-19"}=Deutsch
 {s:"English",t:"2025-12-19"}=English
 {s:"Français",t:"2025-12-19"}=Français
@@ -785,7 +787,7 @@ id=TextButton
 {s:"Lernprogramm",t:"2025-12-18"}=Lernprogramm
 {s:"Sprache wählen",t:"2025-12-18"}=Sprache wählen
 {s:"Nachrichten",t:"2025-12-18"}=Nachrichten
-{s:"Add Engines",t:"2025-12-31"}=Add Engines
+{s:"Add Engines",t:"2026-01-02"}=Add Engines
 {s:"Cancel",t:"2025-12-21"}=Cancel
 {s:"Board Engines",t:"2025-12-21"}=Board Engines
 {s:"Board Window",t:"2025-12-21"}=Board Window
@@ -794,16 +796,16 @@ id=TextButton
 
 [Translation]
 id=Section
-{s:"Global Engine Settings",t:"2025-12-31"}=Global Engine Settings
-{s:"Engines",t:"2025-12-31"}=Engines
-{s:"Opening",t:"2025-12-31"}=Opening
+{s:"Global Engine Settings",t:"2026-01-02"}=Global Engine Settings
+{s:"Engines",t:"2026-01-02"}=Engines
+{s:"Opening",t:"2026-01-02"}=Opening
 {s:"Tournament",t:"2025-12-28"}=Tournament
-{s:"Time Control",t:"2025-12-31"}=Time Control
-{s:"Pgn",t:"2025-12-31"}=Pgn
-{s:"Adjudicate draw",t:"2025-12-31"}=Adjudicate draw
-{s:"Adjudicate resign",t:"2025-12-31"}=Adjudicate resign
+{s:"Time Control",t:"2026-01-02"}=Time Control
+{s:"Pgn",t:"2026-01-02"}=Pgn
+{s:"Adjudicate draw",t:"2026-01-02"}=Adjudicate draw
+{s:"Adjudicate resign",t:"2026-01-02"}=Adjudicate resign
 {s:"History",t:"2025-12-21"}=History
-{s:"SPRT Configuration",t:"2025-12-31"}=SPRT Configuration
+{s:"SPRT Configuration",t:"2026-01-02"}=SPRT Configuration
 
 [Translation]
 id=Option
