--- a/i18n/fra.lang
+++ b/i18n/fra.lang
@@ -1,11 +1,11 @@
 [Translation]
 id=Button
-{s:"Add",t:"2025-12-31"}=Ajouter
-{s:"Remove",t:"2025-12-31"}=Retirer
-{s:"Detect",t:"2025-12-31"}=Detecter
+{s:"Add",t:"2026-01-02"}=Ajouter
+{s:"Remove",t:"2026-01-02"}=Retirer
+{s:"Detect",t:"2026-01-02"}=Detecter
 {s:"New",t:"2025-12-28"}=Nouveau
 {s:"Now",t:"2025-12-28"}=Maint
-{s:"Stop",t:"2025-12-31"}=Arret
+{s:"Stop",t:"2026-01-02"}=Arret
 {s:"Play",t:"2025-12-28"}=Jouer
 {s:"Analyze",t:"2025-12-28"}=Analyser
 {s:"Auto",t:"2025-12-28"}=Auto
@@ -17,21 +17,21 @@ id=Button
 {s:"Swap",t:"2025-12-28"}=Echanger
 {s:"Restart",t:"2025-12-28"}=Rel.
 {s:"Log",t:"2025-12-28"}=Journal
-{s:"Run",t:"2025-12-31"}=Executer
-{s:"Clear",t:"2025-12-31"}=Réinit.
-{s:"Grace",t:"2025-12-28"}=Doux
+{s:"Run",t:"2026-01-02"}=Executer
+{s:"Clear",t:"2026-01-02"}=Réinit.
+{s:"Grace",t:"2026-01-02"}=Doux
 {s:"Open",t:"2025-12-16"}=Ouvrir
 {s:"Recent",t:"2025-12-16"}=Recent
-{s:"Save As",t:"2025-12-31"}=Sous
+{s:"Save As",t:"2026-01-02"}=Sous
 {s:"Filter",t:"2025-12-16"}=Filtre
-{s:"Test",t:"2025-12-31"}=Test
-{s:"Load",t:"2025-12-31"}=Charger
+{s:"Test",t:"2026-01-02"}=Test
+{s:"Load",t:"2026-01-02"}=Charger
 {s:"Continue",t:"2025-12-28"}=Suite
 {s:"Ok",t:"2025-12-15"}=OK
 {s:"Copy",t:"2025-12-15"}=Copier
 {s:"Paste",t:"2025-12-28"}=Coller
 {s:"Cancel",t:"2025-12-22"}=Annuler
-{s:"RGC",t:"2025-12-31"}=RGC
+{s:"RGC",t:"2026-01-02"}=RGC
 {s:"Browse",t:"2025-12-28"}=Parcourir
 {s:"Apply",t:"2025-12-18"}=Appliquer
 {s:"Reset All Tutorials",t:"2025-12-16"}=Réinitialiser tous les tutoriels
@@ -115,11 +115,12 @@ id=Checkbox
 {s:"Ponder",t:"2025-12-28"}=Réfléchir
 {s:"Gauntlet",t:"2025-12-28"}=Gauntlet
 {s:"Use Pentanomial",t:"2025-12-31"}=Use Pentanomial
+{s:"Show all SPRT model variants",t:"2026-01-02"}=Show all SPRT model variants
 
 [Translation]
 id=Input
-{s:"Concurrency",t:"2025-12-31"}=Simultanéité
-{s:"Search",t:"2025-12-31"}=Recherche
+{s:"Concurrency",t:"2026-01-02"}=Simultanéité
+{s:"Search",t:"2026-01-02"}=Recherche
 {s:"Hash (MB)",t:"2025-12-31"}=Hash (MB)
 {s:"Restart",t:"2025-12-31"}=Relancer
 {s:"Trace",t:"2025-12-31"}=Trace
@@ -221,15 +222,15 @@ id=Option
 id=Section
 {s:"Available Engines",t:"2025-12-14"}=Moteurs disponibles
 {s:"Selected Engines",t:"2025-12-14"}=Moteurs sélectionnés
-{s:"Global Engine Settings",t:"2025-12-31"}=Paramètres globaux du moteur
-{s:"Engines",t:"2025-12-31"}=Moteurs
-{s:"Opening",t:"2025-12-31"}=Ouverture
+{s:"Global Engine Settings",t:"2026-01-02"}=Paramètres globaux du moteur
+{s:"Engines",t:"2026-01-02"}=Moteurs
+{s:"Opening",t:"2026-01-02"}=Ouverture
 {s:"Tournament",t:"2025-12-28"}=Tournoi
-{s:"Time Control",t:"2025-12-31"}=Contrôle du temps
-{s:"Pgn",t:"2025-12-31"}=Pgn
-{s:"Adjudicate draw",t:"2025-12-31"}=Adjuger nulle
-{s:"Adjudicate resign",t:"2025-12-31"}=Adjuger abandon
-{s:"SPRT Configuration",t:"2025-12-31"}=Configuration SPRT
+{s:"Time Control",t:"2026-01-02"}=Contrôle du temps
+{s:"Pgn",t:"2026-01-02"}=Pgn
+{s:"Adjudicate draw",t:"2026-01-02"}=Adjuger nulle
+{s:"Adjudicate resign",t:"2026-01-02"}=Adjuger abandon
+{s:"SPRT Configuration",t:"2026-01-02"}=Configuration SPRT
 {s:"Configuration",t:"2025-12-21"}=Configuration
 {s:"Tests",t:"2025-12-16"}=Tests
 {s:"Snackbar Settings",t:"2025-12-18"}=Paramètres Snackbar
@@ -247,8 +248,8 @@ id=Section
 id=Snackbar
 {s:"Note",t:"2025-12-23"}=Note
 {s:"Nothing to clear.",t:"2025-12-22"}=Rien à effacer.
-{s:"Success",t:"2025-12-28"}=Succès
-{s:"SPRT tournament started",t:"2025-12-28"}=Tournoi SPRT démarré
+{s:"Success",t:"2026-01-02"}=Succès
+{s:"SPRT tournament started",t:"2026-01-02"}=Tournoi SPRT démarré
 {s:"SPRT tournament stopped",t:"2025-12-21"}=Tournoi SPRT arrêté
 {s:"Epd analysis started",t:"2025-12-21"}=Analyse EPD démarrée
 {s:"Analysis finished.",t:"2025-12-21"}=Analyse terminée.
@@ -334,27 +335,27 @@ id=Table
 {s:"Tb hits",t:"2025-12-28"}=TB
 {s:"Value",t:"2025-12-28"}=Valeur
 {s:"Primary variant",t:"2025-12-28"}=Variante principale
-{s:"Name",t:"2025-12-31"}=Nom
+{s:"Name",t:"2026-01-02"}=Nom
 {s:"Elo",t:"2025-12-28"}=Elo
 {s:"Error",t:"2025-12-28"}=Erreur
 {s:"Score",t:"2025-12-28"}=Score
 {s:"Total",t:"2025-12-23"}=Total
-{s:"WDL",t:"2025-12-31"}=WDL
-{s:"Count",t:"2025-12-31"}=Nombre
-{s:"Cause",t:"2025-12-31"}=Cause
+{s:"WDL",t:"2026-01-02"}=WDL
+{s:"Count",t:"2026-01-02"}=Nombre
+{s:"Cause",t:"2026-01-02"}=Cause
 {s:"White",t:"2025-12-23"}=Blanc
 {s:"Black",t:"2025-12-23"}=Noir
-{s:"Result",t:"2025-12-31"}=Résultat
+{s:"Result",t:"2026-01-02"}=Résultat
 {s:"Best move",t:"2025-12-21"}=Meilleur coup
 {s:"Engine",t:"2025-12-22"}=Moteur
-{s:"Status",t:"2025-12-16"}=Statut
+{s:"Status",t:"2026-01-02"}=Statut
 {s:"Test",t:"2025-12-16"}=Test
 {s:"Round",t:"2025-12-23"}=Ronde
 {s:"Game",t:"2025-12-23"}=Partie
-{s:"Engine in Test",t:"2025-12-31"}=Moteur en test
-{s:"Engine to Compare",t:"2025-12-31"}=Moteur à comparer
-{s:"Rating",t:"2025-12-31"}=Classement
-{s:"Games",t:"2025-12-31"}=Parties
+{s:"Engine in Test",t:"2026-01-02"}=Moteur en test
+{s:"Engine to Compare",t:"2026-01-02"}=Moteur à comparer
+{s:"Rating",t:"2026-01-02"}=Classement
+{s:"Games",t:"2026-01-02"}=Parties
 {s:"Spike \\1.\\2.",t:"2025-12-16"}=Spike \1.\2.
 {s:"Qapla \\1.\\2.",t:"2025-12-15"}=Qapla \1.\2.
 {s:"Rank",t:"2025-12-22"}=Rang
@@ -375,6 +376,7 @@ id=Table
 {s:"Pi",t:"2025-12-22"}=Pi
 {s:"Mi",t:"2025-12-22"}=Mi
 {s:"Opening",t:"2025-12-23"}=Opening
+{s:"Type",t:"2026-01-02"}=Type
 
 [Translation]
 id=Tooltip
@@ -383,7 +385,7 @@ id=Tooltip
 {s:"Path to opening file (.epd, .pgn, or raw FEN text)",t:"2025-12-21"}=Chemin vers le fichier d'ouverture (.epd, .pgn ou texte FEN brut)
 {s:"Hash table size in megabytes for engine memory",t:"2025-12-21"}=Taille de la table de hachage en mégaoctets pour la mémoire du moteur
 {s:"Number of games to run in parallel",t:"2025-12-21"}=Nombre de parties à exécuter en parallèle
-{s:"Clear all SPRT tournament data and results",t:"2025-12-31"}=Effacer toutes les données et résultats du tournoi SPRT
+{s:"Clear all SPRT tournament data and results",t:"2026-01-02"}=Effacer toutes les données et résultats du tournoi SPRT
 {s:"Remove this engine from selection",t:"2025-12-28"}=Retirer ce moteur de la sélection
 {s:"Run Monte Carlo test to estimate SPRT test duration",t:"2025-12-21"}=Exécuter un test Monte Carlo pour estimer la durée du test SPRT
 {s:"Load SPRT tournament configuration and results from file",t:"2025-12-31"}=Charger la configuration et les résultats du tournoi SPRT depuis un fichier
@@ -410,7 +412,7 @@ id=Tooltip
 {s:"Edit value and click Apply to save changes",t:"2025-12-16"}=Modifier la valeur et cliquer sur Appliquer pour sauvegarder les changements
 {s:"Start new tournament with current configuration",t:"2025-12-23"}=Démarrer un nouveau tournoi avec la configuration actuelle
 {s:"Remove selected engine from configuration",t:"2025-12-28"}=Retirer le moteur sélectionné de la configuration
-{s:"Auto-detect engine capabilities and supported options",t:"2025-12-31"}=Détecter automatiquement les capacités du moteur et les options supportées
+{s:"Auto-detect engine capabilities and supported options",t:"2026-01-02"}=Détecter automatiquement les capacités du moteur et les options supportées
 {s:"Save tournament configuration and results to file",t:"2025-12-23"}=Sauvegarder la configuration et les résultats du tournoi dans un fichier
 {s:"Load tournament configuration and results from file",t:"2025-12-23"}=Charger la configuration et les résultats du tournoi depuis un fichier
 {s:"Stop tournament immediately, aborting running games",t:"2025-12-28"}=Arrêter le tournoi immédiatement, en annulant les parties en cours
@@ -426,7 +428,7 @@ id=Tooltip
 {s:"Continue tournament with current configuration",t:"2025-12-23"}=Continuer le tournoi avec la configuration actuelle
 {s:"All engine instance communication is logged to a single file",t:"2025-12-16"}=Toute la communication des instances moteur est journalisée dans un seul fichier
 {s:"Clear all tournament data and results",t:"2025-12-23"}=Effacer toutes les données et résultats du tournoi
-{s:"Number of games running in parallel",t:"2025-12-31"}=Nombre de parties s'exécutant en parallèle
+{s:"Number of games running in parallel",t:"2026-01-02"}=Nombre de parties s'exécutant en parallèle
 {s:"Add this engine to tournament selection",t:"2025-12-23"}=Ajouter ce moteur à la sélection du tournoi
 Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine=Type de tournoi :\n  gauntlet - Un moteur joue contre tous les autres\n  round-robin - Chaque moteur joue contre chaque autre moteur
 {s:"Repeat all pairings this many times",t:"2025-12-23"}=Répéter toutes les paires ce nombre de fois
@@ -482,7 +484,7 @@ Tournament type:\n  gauntlet - One engine plays against all others\n  round-robi
 {s:"Select option: Tournament",t:"2025-12-23"}=Sélectionner l'option : Tournoi
 {s:"Select option: SPRT Tournament",t:"2025-12-28"}=Sélectionner l'option : Tournoi SPRT
 {s:"Select option: Messages",t:"2025-12-28"}=Sélectionner l'option : Messages
-{s:"Select option: Tutorial",t:"2025-12-22"}=Sélectionner l'option : Tutoriel
+{s:"Select option: Tutorial",t:"2026-01-02"}=Sélectionner l'option : Tutoriel
 {h:"34293611",s:"Load a previously saved tournament from disk and r",t:"2025-12-21"}=Charger un tournoi précédemment sauvegardé depuis le disque et remplacer le tournoi actuel.
 {s:"Select option: Choose Language",t:"2025-12-28"}=Sélectionner l'option : Choisir la langue
 {s:"Select directory for log files",t:"2025-12-16"}=Sélectionner le répertoire pour les fichiers de log
@@ -499,7 +501,7 @@ Tournament type:\n  gauntlet - One engine plays against all others\n  round-robi
 {s:"Restart the engine process",t:"2025-12-16"}=Redémarrer le processus du moteur
 {s:"Open engine configuration to select and manage engines",t:"2025-12-16"}=Ouvrir la configuration du moteur pour sélectionner et gérer les moteurs
 {s:"Toggle engine communication log display",t:"2025-12-16"}=Basculer l'affichage du journal de communication du moteur
-{s:"Select option: EPD Analysis",t:"2025-12-28"}=Sélectionner l'option : Analyse EPD
+{s:"Select option: EPD Analysis",t:"2026-01-02"}=Sélectionner l'option : Analyse EPD
 {s:"Start a new game from the initial position",t:"2025-12-18"}=Commencer une nouvelle partie depuis la position initiale
 {h:"caec1135",s:"Show or hide advanced time control options, such a",t:"2025-12-13"}=Afficher ou masquer les options avancées de contrôle du temps, telles que Tournoi, Temps par coup, Profondeur fixe et Nœuds par coup.
 {s:"Make both engines analyze the position without making moves",t:"2025-12-18"}=Faire analyser la position par les deux moteurs sans jouer de coups
@@ -576,8 +578,8 @@ Tournament type:\n  gauntlet - One engine plays against all others\n  round-robi
 {s:"Select option: Engines hinzufügen",t:"2025-12-18"}=Select option: Engines hinzufügen
 {s:"Stop SPRT tournament or Monte Carlo test immediately",t:"2025-12-28"}=Stop SPRT tournament or Monte Carlo test immediately
 {s:"Start new SPRT tournament with current configuration",t:"2025-12-28"}=Start new SPRT tournament with current configuration
-{s:"Stop SPRT tournament gracefully after current games finish",t:"2025-12-21"}=Stop SPRT tournament gracefully after current games finish
-{s:"Continue SPRT tournament with current configuration",t:"2025-12-28"}=Continue SPRT tournament with current configuration
+{s:"Stop SPRT tournament gracefully after current games finish",t:"2026-01-02"}=Stop SPRT tournament gracefully after current games finish
+{s:"Continue SPRT tournament with current configuration",t:"2026-01-02"}=Continue SPRT tournament with current configuration
 {s:"Load older messages from history (double the display count).",t:"2025-12-21"}=Load older messages from history (double the display count).
 {s:"Command-line arguments to pass to the engine executable",t:"2025-12-28"}=Command-line arguments to pass to the engine executable
 {h:"e0ffa06c",s:"SPRT calculation model:\n- normalized: Recommended ",t:"2025-12-31"}=SPRT calculation model:\n- normalized: Recommended for most cases (supports pentanomial)\n- logistic: Logistic Elo model (supports pentanomial)\n- bayesian: BayesElo model (trinomial only)
@@ -585,15 +587,15 @@ Tournament type:\n  gauntlet - One engine plays against all others\n  round-robi
 
 [Translation]
 id=Tab
-{s:"Engines",t:"2025-12-31"}=Moteurs
-{s:"Tournament",t:"2025-12-31"}=Tournoi
-{s:"Pgn",t:"2025-12-31"}=Pgn
-{s:"Epd",t:"2025-12-31"}=Epd
-{s:"Test",t:"2025-12-31"}=Test
-{s:"Settings",t:"2025-12-31"}=Paramètres
-{s:"Board",t:"2025-12-31"}=Échiquier
-{s:"Chatbot",t:"2025-12-31"}=Chatbot
-{s:"SPRT",t:"2025-12-31"}=SPRT
+{s:"Engines",t:"2026-01-02"}=Moteurs
+{s:"Tournament",t:"2026-01-02"}=Tournoi
+{s:"Pgn",t:"2026-01-02"}=Pgn
+{s:"Epd",t:"2026-01-02"}=Epd
+{s:"Test",t:"2026-01-02"}=Test
+{s:"Settings",t:"2026-01-02"}=Paramètres
+{s:"Board",t:"2026-01-02"}=Échiquier
+{s:"Chatbot",t:"2026-01-02"}=Chatbot
+{s:"SPRT",t:"2026-01-02"}=SPRT
 
 [Translation]
 id=Chatbot
@@ -789,7 +791,7 @@ id=Text
 {s:"No engines added. You can add engines now if you like.",t:"2025-12-16"}=Aucun moteur ajouté. Vous pouvez ajouter des moteurs maintenant si vous voulez.
 {s:"C:\\Chess\\cutechess-cli\\qapla\\1.\\2\\Leorik-\\3.\\4.exe",t:"2025-12-16"}=C:\Chess\cutechess-cli\qapla\1.\2\Leorik-\3.\4.exe
 {s:"Messages",t:"2025-12-16"}=Messages
-{s:"How can I help you?",t:"2025-12-31"}=How can I help you?
+{s:"How can I help you?",t:"2026-01-02"}=How can I help you?
 {s:"Select a tutorial to run:",t:"2025-12-21"}=Sélectionner un tutoriel à exécuter :
 {s:"Please select your preferred language:",t:"2025-12-19"}=Veuillez sélectionner votre langue préférée :
 {h:"b0ade7c5",s:"Select which engine should be tested (gauntlet eng",t:"2025-12-21"}=Select which engine should be tested (gauntlet engine). This is the engine whose performance will be measured. The other engine will be used as the comparison baseline.
@@ -802,17 +804,17 @@ id=Text
 
 [Translation]
 id=TextButton
-{s:"Tournament",t:"2025-12-31"}=Tournoi
-{s:"SPRT Tournament",t:"2025-12-31"}=Tournoi SPRT
-{s:"EPD Analysis",t:"2025-12-31"}=Analyse EPD
-{s:"Board",t:"2025-12-31"}=Échiquier
-{s:"Tutorial",t:"2025-12-31"}=Tutoriel
-{s:"Choose Language",t:"2025-12-31"}=Choisir la langue
-{s:"Messages",t:"2025-12-31"}=Messages
+{s:"Tournament",t:"2026-01-02"}=Tournoi
+{s:"SPRT Tournament",t:"2026-01-02"}=Tournoi SPRT
+{s:"EPD Analysis",t:"2026-01-02"}=Analyse EPD
+{s:"Board",t:"2026-01-02"}=Échiquier
+{s:"Tutorial",t:"2026-01-02"}=Tutoriel
+{s:"Choose Language",t:"2026-01-02"}=Choisir la langue
+{s:"Messages",t:"2026-01-02"}=Messages
 {s:"Deutsch",t:"2025-12-19"}=Deutsch
 {s:"English",t:"2025-12-19"}=English
 {s:"Français",t:"2025-12-19"}=Français
-{s:"Add Engines",t:"2025-12-31"}=Ajouter des moteurs
+{s:"Add Engines",t:"2026-01-02"}=Ajouter des moteurs
 {s:"Cancel",t:"2025-12-21"}=Annuler
 {s:"Board Engines",t:"2025-12-21"}=Moteurs d'échiquier
 {s:"Board Window",t:"2025-12-21"}=Fenêtre d'échiquier
